Swap to reproducing lerna issue
I realized it was actually a lerna issue and not NX.

This switches this repo to reproducing that bug.

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,6 @@
   "packages": ["packages/*"],
   "rejectCycles": true,
   "stream": true,
-  "useWorkspaces": true
+  "useWorkspaces": true,
+  "useNx": true
 }
